--- a/inst/doc/MANOR.bib
+++ b/inst/doc/MANOR.bib
@@ -478,10 +478,21 @@
    Pages          = {74}
 }
 
-@unpublished{pneuvial_phupe,
-   Author         = {P. Neuvial and P. Hupé and I. Brito and S. Liva and E. Manié and C. Brennetot and A. Aurias and F. Radvanyi and E. Barillot},
-   Note           = {In preparation},	
-   Title          = {Spatial normalization of array-{CGH} data}
+@ARTICLE{NeuvialHupeBarillot06,
+  author = {Neuvial, P. and Hupé, P. and Brito, I. and Liva, S. and Manié, E. and
+	Brennetot, C. and Radvanyi, F. and Aurias, A. and Barillot, E.},
+  title = {Spatial normalization of array-{CGH} data.},
+  journal = {BMC Bioinformatics},
+  year = {2006},
+  volume = {7},
+  pages = {264},
+  number = {1},
+  month = {May},
+  doi = {10.1186/1471-2105-7-264},
+  keywords = {16716215},
+  pii = {1471-2105-7-264},
+  pmid = {16716215},
+  url = {http://dx.doi.org/10.1186/1471-2105-7-264},
 }
 
 @Manual{,
