git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/MANOR@33896 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+2008-23-09
+- modification de la fonction cv pour retourner NA lorsque toutes la valeurs du vecteur sont à NA
+- modification de la function getChromosomeArm pour que cytoband ne soit pas positionnée à NULL
+
 2008-09-04:
 - added a CHANGELOG
 - updated outdated reference in the .bib file
