- now use standard "keyword"s. - changed \link{\code{stuff}} into \code{\link{stuff}}.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/MANOR@36375 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+2008-12-31
+- now use standard "keyword"s
+- changed \link{\code{stuff}} into \code{\link{stuff}}
+
 2008-11-26
 - filled in "keyword" sections in .Rd files.
 - removed empty "examples" sections from .Rd files.
