only one keyword per \keyword entry...
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/MANOR@36396 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2009-01-01
+- only one keyword per \keyword entry...
+
 2008-12-31
 - now use standard "keyword"s
 - changed \link{\code{stuff}} into \code{\link{stuff}}
