- (almost) one file per function in R/ - removed empty section \details in man/qscore.Rd - added a NAMESPACE - removed inst/doc/Makefile (not needed anymore because no html output required)
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/MANOR@36452 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+2009-01-04
+- (almost) one file per function in R/
+- removed empty section \details in man/qscore.Rd
+- added a NAMESPACE
+- removed inst/doc/Makefile (not needed anymore because no html output required)
+
 2009-01-02
 - removed another non-standard keyword
 
