--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2009-01-06
+- 'norm' and 'sort' are now S3 methods as well
+
 2009-01-04
 - (almost) one file per function in R/
 - removed empty section \details in man/qscore.Rd
