- updated references in .Rd files. - fixed warnings due to incorrect use of \item in .Rd files.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/MANOR@36599 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+2009-01-13
+- updated references in .Rd files.
+- fixed warnings due to incorrect use of \item in .Rd files.
+
 2009-01-06
 - 'norm' and 'sort' are now S3 methods as well
 
