- misplaced alignment tab in man/spatial.Rd.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/MANOR@36687 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2009-01-15
+- misplaced alignment tab in man/spatial.Rd.
+
 2009-01-13
 - updated references in .Rd files.
 - fixed warnings due to incorrect use of \item in .Rd files.
