Updated calls to 'GLAD:::daglad' in the vignette to fix an error caused by changes in the defaults of 'daglad'.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/MANOR@53885 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,7 @@
+2011-03-18
+o Updated calls to 'GLAD:::daglad' in the vignette to fix an error
+caused by changes in the defaults of 'daglad'.
+
 2010-10-01
 o Cleaned 'data/flags.RData" which contained objects from an old 'globalenv'.
 o Updated maintainer's email address.
