Modified vignette and examples to reflect new loction of txt and gpr files.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/MANOR@54159 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/MANOR.Rnw
+++ b/inst/doc/MANOR.Rnw
@@ -318,7 +318,7 @@ In this section we illustrate the use of \Rpackage{MANOR} on two CGH arrays. Our
 \subsubsection{Data preparation: \Rfunction{import}}
 
 <<echo=TRUE>>=
-dir.in <- system.file("data", package="MANOR")
+dir.in <- system.file("extdata", package="MANOR")
 
 ## import from 'spot' files
 spot.names <- c("LogRatio", "RefFore", "RefBack", "DapiFore", "DapiBack", "SpotFlag", "ScaledLogRatio")
