2013-07-01 o Replaced calls to 'exit', 'fprintf' which now raise a WARNING upon check.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/MANOR@78039 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,6 @@
+2013-07-01
+o Replaced calls to 'exit', 'fprintf' which now raise a WARNING upon check.
+
 2011-03-18
 o Updated calls to 'GLAD:::daglad' in the vignette to fix an error
 caused by changes in the defaults of 'daglad'.
