--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,5 +1,6 @@
-2013-07-01
+2013-07-03
 o Replaced calls to 'exit', 'fprintf' which now raise a WARNING upon check.
+o Iteration index not printed anymore in 'nem' (raised an error when compiling the vignette).
 
 2011-03-18
 o Updated calls to 'GLAD:::daglad' in the vignette to fix an error
