--- a/vignettes/MANOR.bib
+++ b/vignettes/MANOR.bib
@@ -14,7 +14,7 @@
 
 @PHDTHESIS{ambroise96,
    Author         = {C. Ambroise},
-   School         = {Université Technique de Compiègne, France},
+   School         = {UniversitÃ© Technique de CompiÃ¨gne, France},
    Title          = {Approche probabiliste en classification automatique et contraintes de voisinage},
    Year           = {1996}
 }
@@ -29,7 +29,7 @@
 
 
 @Article{autio03,
- author =   {Reija Autio and Sampsa Hautaniemi and Päivikki Kauraniemi and Olli Yli-Harja and Jaakko Astola and Maija Wolf and Anne Kallioniemi},
+ author =   {Reija Autio and Sampsa Hautaniemi and PÃ¤ivikki Kauraniemi and Olli Yli-Harja and Jaakko Astola and Maija Wolf and Anne Kallioniemi},
  title =    {{CGH-Plotter: MATLAB} toolbox for {CGH-data} analysis},
  journal =      {Bioinformatics},
  year =     {2003},
@@ -121,14 +121,13 @@
  OPTannote =    {}
 }
 
-@INCOLLECTION{Dudoit03,
+@INCOLLECTION{dudoit03,
   AUTHOR = {S. Dudoit and Y. H. Yang},
   TITLE = {Bioconductor {R} packages for exploratory analysis and normalization of c{DNA} microarray data},
   BOOKTITLE = {The Analysis of Gene Expression Data: Methods and Software},
   PUBLISHER = {Springer, New York},
   YEAR = {2003},
   EDITOR = {G. Parmigiani and E. S. Garrett and R. A. Irizarry and S. L. Zeger},
-  URL = {http://www.stat.berkeley.edu/~sandrine}
 }
 
 @Article{fridlyand04,
@@ -453,7 +452,7 @@
 }
 
 @ARTICLE{phupe04,
-   Author         = {P. Hupé and N. Stransky and J-P. Thiery and F. Radvanyi and E. Barillot},
+   Author         = {P. HupÃ© and N. Stransky and J-P. Thiery and F. Radvanyi and E. Barillot},
    Journal        = {Bioinformatics},
    Title          = {Analysis of array {CGH} data: from signal ratios to gain and loss of {DNA} regions},
    Year           = {2004},
@@ -478,7 +477,7 @@
 }
 
 @ARTICLE{NeuvialHupeBarillot06,
-  author = {Neuvial, P. and Hupé, P. and Brito, I. and Liva, S. and Manié, E. and
+  author = {Neuvial, P. and HupÃ©, P. and Brito, I. and Liva, S. and ManiÃ©, E. and
 	Brennetot, C. and Radvanyi, F. and Aurias, A. and Barillot, E.},
   title = {Spatial normalization of array-{CGH} data.},
   journal = {BMC Bioinformatics},
@@ -494,7 +493,7 @@
   url = {http://dx.doi.org/10.1186/1471-2105-7-264},
 }
 
-@Manual{,
+@Manual{R,
      title        = {R: A language and environment for
                      statistical computing},
      author       = {{R Development Core Team}},
